# deckd

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: daemon.rs  error.rs  event.rs  lib.rs  main.rs  state.rs
src/action/: http.rs  mod.rs  navigate.rs  shell.rs
src/config/: mod.rs  schema.rs  watcher.rs
src/device/: input.rs  mod.rs
src/page/: mod.rs
src/render/: canvas.rs  icon.rs  mod.rs  text.rs
systemd/: deckd.service
udev/: 40-streamdeck.rules
